tests/fixtures/invalid/bool_add_list.py
# Cannot add Bool and List[int]
x: bool = True + [1, 2, 3]
